--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -6,12 +6,15 @@
 
     <TextView
         android:id="@+id/chatName"
+        android:fontFamily="@font/roboto_thin"
         android:layout_width="match_parent"
+        android:textSize="20dp"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/lastMessage"
         android:layout_width="match_parent"
+        android:fontFamily="@font/roboto_thin"
         android:layout_height="wrap_content"/>
 
 
