--- a/app/src/main/res/layout/fragment_one_chat.xml
+++ b/app/src/main/res/layout/fragment_one_chat.xml
@@ -8,8 +8,7 @@
  <include
      android:id="@+id/fragment_post"
      layout="@layout/item_chat"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     />
+     android:layout_width="match_parent"
+     android:layout_height="match_parent" />
 
 </FrameLayout>
