--- a/app/src/main/res/layout/fragment_one_chat.xml
+++ b/app/src/main/res/layout/fragment_one_chat.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.onechat.OneChatFragment">
 
- <include
-     android:id="@+id/fragment_post"
-     layout="@layout/item_chat"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent" />
+ <EditText
+     android:id="@+id/editText"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:text="@string/hello_blank_fragment"
+     android:fontFamily="@font/roboto_thin"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toStartOf="@id/sendMessage"
+     app:layout_constraintStart_toStartOf="parent" />
 
-</FrameLayout>
+
+ <ImageButton
+     android:id="@+id/sendMessage"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:src="@drawable/ic_send"
+     app:layout_constraintBottom_toBottomOf="@id/editText"
+     app:layout_constraintEnd_toStartOf="@+id/goToProfile"
+     app:layout_constraintTop_toTopOf="@id/editText" />
+
+ <ImageButton
+     android:id="@+id/goToProfile"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:src="@drawable/ic_profile"
+     app:layout_constraintBottom_toBottomOf="parent"
+     app:layout_constraintEnd_toEndOf="parent" />
+
+ <androidx.recyclerview.widget.RecyclerView
+     android:id="@+id/recycler_view"
+     android:layout_width="match_parent"
+     android:layout_height="0dp"
+     android:layout_marginTop="16dp"
+     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:layout_constraintBottom_toTopOf="@id/editText"
+     tools:listitem="@layout/item_chat" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
