--- a/app/src/main/res/layout/outgouing_message.xml
+++ b/app/src/main/res/layout/outgouing_message.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"/>
+    android:layout_height="match_parent">
 
 
     <FrameLayout
@@ -18,14 +13,20 @@
 
         <TextView
             android:id="@+id/text"
-            android:text=" TEST TEST TEST TEST TEST TEST"
+            android:text="TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:background="@drawable/custom_button"
+            android:background="@drawable/custom_button_two"
             android:layout_margin="16dp"
             android:padding="8dp"/>
 
     </FrameLayout>
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"/>
+
 
 </LinearLayout>
